Create speaker format; add Doyne Farmer; minor cosmetic/name fixes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</script>
 
 	<meta charset="utf-8">
-	<title>ML for Economic Policy - NeurIPS 2020</title>
+	<title>AI for Economics - Seminar Series</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<!-- Mobile Specific Metas -->
@@ -47,12 +47,6 @@
 		</div>
 		<div class="row">
 			<div class="twelve columns">
-<!--				<p style="text-align: center;">-->
-<!--					<a href="mailto:mlforeconomicpolicy.neurips2020@gmail.com">mlforeconomicpolicy.neurips2020@gmail.com</a>-->
-<!--				</p>-->
-<!--				<p style="text-align: center; font-weight: 900">-->
-<!--					Submissions: <a style="font-weight: 900" href="https://easychair.org/conferences/?conf=mleconpolicy20">EasyChair (https://easychair.org/conferences/?conf=mleconpolicy20)</a>.-->
-<!--				</p>-->
 				<p style="text-align: center">
 					<a href="#topics">Topics</a>
 					-
@@ -62,7 +56,7 @@
 				</p>
 			</div>
 		</div>
-		<div class="row">
+		<div class="row teaser">
 			<div class="twelve columns with-padding teaser">
 				<ul class="nodecoration-list teaser-questions">
 					<li>
@@ -94,30 +88,6 @@
 
 			</div>
 		</div>
-<!--		<div class="row teaser extend-width" id="speakers">-->
-<!--			<div class="six columns">-->
-<!--				<h2>KEYNOTE SPEAKERS</h2>-->
-<!--				<ul class="nodecoration-list">-->
-<!--					<li>Micheal Kearns (UPenn)</li>-->
-<!--					<li>Susan Athey (Stanford)</li>-->
-<!--					<li>Sendhil Mullainathan (University of Chicago)</li>-->
-<!--					<li>Doina Precup (Deepmind, McGill)</li>-->
-<!--				</ul>-->
-<!--			</div>-->
-<!--			<div class="six columns">-->
-<!--				<h2>PANELISTS</h2>-->
-<!--				<ul class="nodecoration-list">-->
-<!--					<li>Sharad Goel (Stanford)</li>-->
-<!--					<li>Daniel Bjorkegren (Brown)</li>-->
-<!--					<li>Eva Tardos (Cornell)</li>-->
-<!--					<li>Rediet Abebe (Harvard)</li>-->
-<!--					<li>Thore Graepel (Deepmind, UCL</li>-->
-<!--					<li>Doyne Farmer (Oxford)</li>-->
-<!--					<li>Marietje Schaake (Stanford)</li>-->
-<!--					<li>TBC</li>-->
-<!--				</ul>-->
-<!--			</div>-->
-<!--		</div>-->
 		<div class="row" id="topics">
 			<div class="six columns">
 				<h2>
@@ -149,145 +119,80 @@
 				</ul>
 			</div>
 		</div>
-		<div class="row" id="organizers">
-			<div class="twelve columns">
-				<h2>
-					ORGANIZATION
-				</h2>
+		<div class="row">
+			<h2>
+				ORGANIZATION
+			</h2>
+			<div id="spancontainer">
+				<div class="organizer-box">
+					<div class="organizer-tile">
+						<img src="images/david.png" />
+						<p class="organizer-name">
+							David C. Parkes
+						</p>
+						<p class="organizer-affiliation">
+							Harvard
+						</p>
+					</div>
+				</div>
+				<div class="organizer-box">
+					<div class="organizer-tile">
+						<img src="images/alex.jpg" />
+						<p class="organizer-name">
+							Alex Trott
+						</p>
+						<p class="organizer-affiliation">
+							Salesforce
+						</p>
+					</div>
+				</div>
+				<div class="organizer-box">
+					<div class="organizer-tile">
+						<img src="images/stephan.jpg" />
+						<p class="organizer-name">
+							Stephan Zheng
+						</p>
+						<p class="organizer-affiliation">
+							Salesforce
+						</p>
+					</div>
+				</div>
+				<span class="stretch"></span>
 			</div>
 		</div>
-		<div class="row extend-width">
-<!--			<div class="two columns organizer-tile">-->
-<!--				<img src="images/nika.png" />-->
-<!--				<p class="organizer-name">-->
-<!--					Nika Haghtalab-->
-<!--				</p>-->
-<!--				<p class="organizer-affiliation">-->
-<!--					Cornell-->
-<!--				</p>-->
-<!--			</div>-->
-<!--			<div class="two columns organizer-tile">-->
-<!--				<img src="images/annie.png" />-->
-<!--				<p class="organizer-name">-->
-<!--					Annie Liang-->
-<!--				</p>-->
-<!--				<p class="organizer-affiliation">-->
-<!--					UPenn-->
-<!--				</p>-->
-<!--			</div>-->
-<!--			<div class="two columns organizer-tile">-->
-<!--				<img src="images/jamie.png" />-->
-<!--				<p class="organizer-name">-->
-<!--					Jamie Morgenstern-->
-<!--				</p>-->
-<!--				<p class="organizer-affiliation">-->
-<!--					UW-->
-<!--				</p>-->
-<!--			</div>-->
-			<div class="two columns organizer-tile">
-				<img src="images/david.png" />
-				<p class="organizer-name">
-					David C. Parkes
-				</p>
-				<p class="organizer-affiliation">
-					Harvard
-				</p>
-			</div>
-			<div class="two columns organizer-tile">
-				<img src="images/alex.jpg" />
-				<p class="organizer-name">
-					Alex Trott
-				</p>
-				<p class="organizer-affiliation">
-					Salesforce
-				</p>
-			</div>
-			<div class="two columns organizer-tile">
-				<img src="images/stephan.jpg" />
-				<p class="organizer-name">
-					Stephan Zheng
-				</p>
-				<p class="organizer-affiliation">
-					Salesforce
-				</p>
+
+		<div class="row">
+			<h2>
+				UPCOMING SEMINAR - <strong>October 6, 2020</strong>
+			</h2>
+			<div id="spancontainer">
+				<div class="organizer-box">
+					<div class="organizer-tile">
+						<img src="images/Farmer_Doyne.jpg" />
+						<p class="organizer-name">
+							Doyne Farmer
+						</p>
+						<p class="organizer-affiliation">
+							Oxford
+						</p>
+					</div>
+				</div>
+				<div class="speaker-box-text">
+					<p class="title">
+						Global Microeconomics
+					</p>
+					<p class="abstract">
+						Conventional economics is based on ideas, such as utility maximization, that are difficult to match to empirical data.
+						We are increasingly able to capture rich microdata on individual agents and institutions that allow us to build models from the bottom up.
+						This requires new approaches based on directly modeling behavior using more realistic models of behavior.
+						I’ll give a few examples that serve as proofs of principle, and paint a vision of what can be done.
+					</p>
+				</div>
+				<span class="stretch"></span>
 			</div>
 		</div>
-<!--		<div class="row" id="cfp">-->
-<!--			<div class="twelve columns cfp">-->
-<!--				<h2>-->
-<!--					CALL FOR PAPERS-->
-<!--				</h2>-->
 
-<!--				<h3>-->
-<!--					BEST PAPER PRIZES-->
-<!--				</h3>-->
-<!--				<p>-->
-<!--					We will award two best paper prizes from the contributed works. The two awards will recognize methodological and empirical contributions, respectively. Each best paper will be invited to give an oral presentation during the seminar series.-->
-<!--				</p>-->
 
-<!--				<h3>-->
-<!--					FINANCIAL SUPPORT-->
-<!--				</h3>-->
-<!--				<p>-->
-<!--					We will provide financial support (registration award) for authors with accepted papers, speakers, and attendees on a needs-based basis, sponsored by Salesforce. Based on demand, there will be a limit to the number of attendees we will support. Please fill out and apply via this form: <a href="https://forms.gle/WMhnyqz6vZe74b2Z7">https://forms.gle/WMhnyqz6vZe74b2Z7</a>.-->
-<!--				</p>-->
-<!--				<h3>-->
-<!--					SUBMISSION INSTRUCTIONS-->
-<!--				</h3>-->
-<!--				<p style="font-weight: 900">-->
-<!--					Submit here: <a style="font-weight: 900" href="https://easychair.org/conferences/?conf=mleconpolicy20">EasyChair (https://easychair.org/conferences/?conf=mleconpolicy20)</a>.-->
-<!--				</p>-->
-<!--				<p>-->
-<!--					This seminar series is non-archival. All accepted papers will be presented as virtual posters and invited to record 5-minute videos, with exceptional submissions also presented as 20-minute oral presentations.-->
-<!--				</p>-->
-<!--				<p>-->
-<!--					Submissions should not include work that was published or first made available before January 1, 2017. Work that has been published or has appeared on January 1, 2017, or later is acceptable. Work that is in submission / under review is acceptable.-->
-<!--				</p>-->
-<!--				<ul>-->
-<!--					<li>-->
-<!--						Up to 8 pages (excluding references), using the NeurIPS format.-->
-<!--					</li>-->
-<!--					<li>-->
-<!--						Please do not include author information, submissions must be made anonymous.-->
-<!--					</li>-->
-<!--					<li>-->
-<!--						Each paper should include a short declaration on the ethics and societal impact of the work.-->
-<!--					</li>-->
-<!--					<li>-->
-<!--						Each paper should state the relevance of the work to the seminar series. The organizers will desk-reject submissions that are not relevant to the seminar series.-->
-<!--					</li>-->
-<!--					<li>-->
-<!--						Each paper should state that the submitted work has not been published or first made available before January 1, 2017, and is original work.-->
-<!--					</li>-->
-<!--					<li>-->
-<!--						Any papers found in violation of these rules will be rejected.-->
-<!--					</li>-->
-<!--					<li>-->
-<!--						Accepted papers will be online 2 weeks before the day of the seminar series.-->
-<!--					</li>-->
-<!--				</ul>-->
-
-<!--				We will employ a double-blind reviewing system. Reviewers and organizers will not know the identity of the authors of submitted work. Only a designated external neutral party will have access to all author information.-->
-
-<!--				<h3>-->
-<!--					IMPORTANT DATES-->
-<!--				</h3>-->
-<!--				<ul>-->
-<!--					<li>-->
-<!--						Submission Deadline: October 9, 2020, 11:59 pm, Anywhere-on-Earth-->
-<!--					</li>-->
-<!--					<li>-->
-<!--						Notification of Acceptance: October 30, 2020-->
-<!--					</li>-->
-<!--					<li>-->
-<!--						Camera-ready Deadline for Accepted Papers: TBC-->
-<!--					</li>-->
-<!--					<li>-->
-<!--						Seminar series: December 11, 2020-->
-<!--					</li>-->
-<!--				</ul>-->
-<!--			</div>-->
-<!--		</div>-->
 		<div class="row">
 			<div class="twelve columns">
 				<h2>
@@ -308,33 +213,6 @@
 				</p>
 			</div>
 		</div>
-<!--		<div class="row">-->
-<!--			<div class="twelve columns">-->
-<!--				<h2>-->
-<!--					ACCEPTED PAPERS-->
-<!--				</h2>-->
-<!--				<p>-->
-<!--					TBA-->
-<!--				</p>-->
-<!--			</div>-->
-<!--		</div>-->
-<!--		<div class="row">-->
-<!--			<div class="twelve columns">-->
-<!--				<h2>-->
-<!--					PROGRAM COMMITTEE-->
-<!--				</h2>-->
-<!--				<p>-->
-<!--					TBA-->
-<!--				</p>-->
-<!--			</div>-->
-<!--		</div>-->
-<!--		<div class="row">-->
-<!--			<div class="twelve columns">-->
-<!--				<p>-->
-<!--					Questions? Email us: <a href="mailto:mlforeconomicpolicy.neurips2020@gmail.com">mlforeconomicpolicy.neurips2020@gmail.com</a>.-->
-<!--				</p>-->
-<!--			</div>-->
-<!--		</div>-->
 	</div>
 </body>
 
