--- a/index.html
+++ b/index.html
@@ -56,6 +56,33 @@
 				</p>
 			</div>
 		</div>
+		<div class="row">
+			<div class="twelve columns">
+				<ul>
+					<li>
+						Talks are hosted on Zoom, register here: <a href="https://harvard.zoom.us/webinar/register/WN_mJTXlNLEQ827hTXWkc1Orw">						
+							https://harvard.zoom.us/webinar/register/WN_mJTXlNLEQ827hTXWkc1Orw 
+						</a>
+					</li>
+					<li>
+						All talks will be recorded and made available.
+					</li>
+					<li>
+						Discussions will take place on Slack: 
+						<a href="https://join.slack.com/t/aieconomist/shared_invite/zt-g71ajic7-XaMygwNIup~CCzaR1T0wgA">
+							https://join.slack.com/t/aieconomist/shared_invite/zt-g71ajic7-XaMygwNIup~CCzaR1T0wgA 
+						</a>
+					</li>
+					<li>
+						To receive future announcements: join the Google Group: 
+						<a href="https://groups.google.com/g/ai-for-economics-seminar">
+							https://groups.google.com/g/ai-for-economics-seminar
+						</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+		
 		<div class="row teaser">
 			<div class="twelve columns with-padding teaser">
 				<ul class="nodecoration-list teaser-questions">
@@ -209,7 +236,20 @@
 					SCHEDULE
 				</h2>
 				<p>
-					TBC
+					<ul>
+						<li>
+							November 10, 2020: Amy Greenwald (Brown)
+						</li>
+						<li>
+							December 15, 2020: Lihong Li (Google)
+						</li>
+						<li>
+							February 2, 2021: Fei Fang (CMU)
+						</li>
+						<li>
+							March 9, 2021: Thore Graepel (Deepmind, UCL)
+						</li>
+					</ul>
 				</p>
 			</div>
 		</div>
