--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
 				<h5>
 					SEMINAR CO-ORGANIZED BY HARVARD ECON-CS & SALESFORCE AI RESEARCH
 				</h5>
-        	</div>
-		</div>
-		<div class="row">
+        	</div>		
 			<div class="twelve columns">
 				<p style="text-align: center">
 					<a href="#topics">Topics</a>
@@ -54,32 +52,6 @@
 					- 
 					<a href="#organizers">Organizers</a>
 				</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="twelve columns">
-				<ul>
-					<li>
-						Talks are hosted on Zoom, register here: <a href="https://harvard.zoom.us/webinar/register/WN_mJTXlNLEQ827hTXWkc1Orw">						
-							https://harvard.zoom.us/webinar/register/WN_mJTXlNLEQ827hTXWkc1Orw 
-						</a>
-					</li>
-					<li>
-						All talks will be recorded and made available.
-					</li>
-					<li>
-						Discussions will take place on Slack: 
-						<a href="https://join.slack.com/t/aieconomist/shared_invite/zt-g71ajic7-XaMygwNIup~CCzaR1T0wgA">
-							https://join.slack.com/t/aieconomist/shared_invite/zt-g71ajic7-XaMygwNIup~CCzaR1T0wgA 
-						</a>
-					</li>
-					<li>
-						To receive future announcements: join the Google Group: 
-						<a href="https://groups.google.com/g/ai-for-economics-seminar">
-							https://groups.google.com/g/ai-for-economics-seminar
-						</a>
-					</li>
-				</ul>
 			</div>
 		</div>
 		
@@ -99,6 +71,87 @@
 						How can we build rich and faithful simulations of economic systems with strategic agents?
 					</li>
 				</ul>
+			</div>
+		</div>
+		
+		<div class="row">
+			<h2>
+				UPCOMING: <strong>October 6, 2020</strong>
+			</h2>
+			<div id="spancontainer">
+				<div class="four columns speaker-box">
+					<div class="speaker-tile">
+						<img src="images/Farmer_Doyne.jpg" />
+						<p class="speaker-name">
+							Doyne Farmer
+						</p>
+						<p class="speaker-affiliation">
+							Oxford
+						</p>
+					</div>
+				</div>
+				<div class="eight columns speaker-box-text">
+					<p class="title">
+						Global Microeconomics
+					</p>
+					<p class="abstract">
+						Conventional economics is based on ideas, such as utility maximization, that are difficult to match to empirical data.
+						We are increasingly able to capture rich microdata on individual agents and institutions that allow us to build models from the bottom up.
+						This requires new approaches based on directly modeling behavior using more realistic models of behavior.
+						I’ll give a few examples that serve as proofs of principle, and paint a vision of what can be done.
+					</p>
+				</div>
+				<span class="stretch"></span>
+			</div>
+		</div>
+		
+		<div class="row">
+			<div class="twelve columns">
+				<h2>
+					ACCESS
+				</h2>
+				<ul>
+					<li>
+						Talks are hosted on Zoom, register <a href="https://harvard.zoom.us/webinar/register/WN_mJTXlNLEQ827hTXWkc1Orw">here</a>.
+					</li>
+					<li>
+						All talks will be recorded and made available.
+					</li>
+					<li>
+						Discussions will take place on
+						<a href="https://join.slack.com/t/aieconomist/shared_invite/zt-g71ajic7-XaMygwNIup~CCzaR1T0wgA">Slack, join our channel</a>.
+					</li>
+					<li>
+						To receive future announcements: join the 
+						<a href="https://groups.google.com/g/ai-for-economics-seminar">
+							Google Group
+						</a>.
+					</li>
+				</ul>
+			</div>
+		</div>
+				
+		<div class="row" id="schedule">
+			<div class="twelve columns">
+				<h2>
+					SCHEDULE
+				</h2>
+				<p>
+					<ul>
+						<li>
+							November 10, 2020: Amy Greenwald (Brown)
+						</li>
+						<li>
+							December 15, 2020: Lihong Li (Google)
+						</li>
+						<li>
+							February 2, 2021: Fei Fang (CMU)
+						</li>
+						<li>
+							March 9, 2021: Thore Graepel (Deepmind, UCL)
+						</li>
+					</ul>
+				</p>
 			</div>
 		</div>
 		<div class="row">
@@ -185,72 +238,6 @@
 					</div>
 				</div>
 				<span class="stretch"></span>
-			</div>
-		</div>
-
-		<div class="row">
-			<h2>
-				UPCOMING SEMINAR - <strong>October 6, 2020</strong>
-			</h2>
-			<div id="spancontainer">
-				<div class="organizer-box">
-					<div class="organizer-tile">
-						<img src="images/Farmer_Doyne.jpg" />
-						<p class="organizer-name">
-							Doyne Farmer
-						</p>
-						<p class="organizer-affiliation">
-							Oxford
-						</p>
-					</div>
-				</div>
-				<div class="speaker-box-text">
-					<p class="title">
-						Global Microeconomics
-					</p>
-					<p class="abstract">
-						Conventional economics is based on ideas, such as utility maximization, that are difficult to match to empirical data.
-						We are increasingly able to capture rich microdata on individual agents and institutions that allow us to build models from the bottom up.
-						This requires new approaches based on directly modeling behavior using more realistic models of behavior.
-						I’ll give a few examples that serve as proofs of principle, and paint a vision of what can be done.
-					</p>
-				</div>
-				<span class="stretch"></span>
-			</div>
-		</div>
-
-
-		<div class="row">
-			<div class="twelve columns">
-				<h2>
-					ACCESS
-				</h2>
-				<p>
-					TBC
-				</p>
-			</div>
-		</div>
-		<div class="row" id="schedule">
-			<div class="twelve columns">
-				<h2>
-					SCHEDULE
-				</h2>
-				<p>
-					<ul>
-						<li>
-							November 10, 2020: Amy Greenwald (Brown)
-						</li>
-						<li>
-							December 15, 2020: Lihong Li (Google)
-						</li>
-						<li>
-							February 2, 2021: Fei Fang (CMU)
-						</li>
-						<li>
-							March 9, 2021: Thore Graepel (Deepmind, UCL)
-						</li>
-					</ul>
-				</p>
 			</div>
 		</div>
 	</div>
