--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				<span class="stretch"></span>
 			</div>
 		</div>
-		
+
 		<div class="row">
 			<div class="twelve columns">
 				<h2>
@@ -138,6 +138,9 @@
 				</h2>
 				<p>
 					<ul>
+						<li>
+							October 6, 2020: Doyne Farmer (Oxford)
+						</li>
 						<li>
 							November 10, 2020: Amy Greenwald (Brown)
 						</li>
