Update upcoming block with Amy Greenwald

--- a/index.html
+++ b/index.html
@@ -74,31 +74,74 @@
 			</div>
 		</div>
 		
+<!--		<div class="row">-->
+<!--			<h2>-->
+<!--				UPCOMING: <strong>October 6, 2020</strong>-->
+<!--			</h2>-->
+<!--			<div id="spancontainer">-->
+<!--				<div class="four columns speaker-box">-->
+<!--					<div class="speaker-tile">-->
+<!--						<img src="images/Farmer_Doyne.jpg" />-->
+<!--						<p class="speaker-name">-->
+<!--							Doyne Farmer-->
+<!--						</p>-->
+<!--						<p class="speaker-affiliation">-->
+<!--							Oxford-->
+<!--						</p>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--				<div class="eight columns speaker-box-text">-->
+<!--					<p class="title">-->
+<!--						Global Microeconomics-->
+<!--					</p>-->
+<!--					<p class="abstract">-->
+<!--						Conventional economics is based on ideas, such as utility maximization, that are difficult to match to empirical data.-->
+<!--						We are increasingly able to capture rich microdata on individual agents and institutions that allow us to build models from the bottom up.-->
+<!--						This requires new approaches based on directly modeling behavior using more realistic models of behavior.-->
+<!--						I’ll give a few examples that serve as proofs of principle, and paint a vision of what can be done.-->
+<!--					</p>-->
+<!--				</div>-->
+<!--				<span class="stretch"></span>-->
+<!--			</div>-->
+<!--		</div>-->
+
 		<div class="row">
 			<h2>
-				UPCOMING: <strong>October 6, 2020</strong>
+				UPCOMING: <strong>November 10, 2020</strong>
 			</h2>
 			<div id="spancontainer">
 				<div class="four columns speaker-box">
 					<div class="speaker-tile">
-						<img src="images/Farmer_Doyne.jpg" />
+						<img src="images/Amy_Greenwald.jpeg" />
 						<p class="speaker-name">
-							Doyne Farmer
+							Amy Greenwald
 						</p>
 						<p class="speaker-affiliation">
-							Oxford
+							Brown University
 						</p>
 					</div>
 				</div>
 				<div class="eight columns speaker-box-text">
 					<p class="title">
-						Global Microeconomics
+						Learning Equilibria in Simulation-Based Games ...
+						and the Ensuing Empirical Design of Mechanisms
 					</p>
 					<p class="abstract">
-						Conventional economics is based on ideas, such as utility maximization, that are difficult to match to empirical data.
-						We are increasingly able to capture rich microdata on individual agents and institutions that allow us to build models from the bottom up.
-						This requires new approaches based on directly modeling behavior using more realistic models of behavior.
-						I’ll give a few examples that serve as proofs of principle, and paint a vision of what can be done.
+						We describe a methodology for the design of parametric mechanisms,
+						which are multiagent systems inhabited by strategic agents, with knobs
+						that can be adjusted to achieve specific goals.  For example, a
+						network designer might seek a design that minimizes congestion
+						assuming selfish agents that play Nash equilibria.  Our methodology
+						applies under two key conditions: 1. the mechanisms induce games that
+						can be simulated, but that do not afford an analytic description,
+						2. the game-theoretic properties of interest (e.g., equilibria, social
+						welfare, etc.) are Lipschitz continuous in utilities.  Under these
+						conditions, we use the probably approximately correct learning
+						framework to construct algorithms that learn such properties.  We
+						show experimentally that our methodology can be used to design
+						effective mechanisms that capture stylized, but rich multiagent
+						systems, such as advertising exchanges, which are not generally
+						amenable to analytical mechanism design.
 					</p>
 				</div>
 				<span class="stretch"></span>
