Add Farmer recording; update schedule; clean up

--- a/index.html
+++ b/index.html
@@ -32,189 +32,209 @@
 </head>
 
 <body>
-	<div class="container">
-		<div class="row">
-			<div class="header text-center banner">
+<div class="container">
+	<div class="row">
+		<div class="header text-center banner">
+		</div>
+		<div class="header text-center">
+			<h1>
+				AI FOR ECONOMICS
+			</h1>
+			<h5>
+				SEMINAR CO-ORGANIZED BY HARVARD ECON-CS & SALESFORCE AI RESEARCH
+			</h5>
+		</div>
+		<div class="twelve columns">
+			<p style="text-align: center">
+				<a href="#schedule">Schedule</a>
+				-
+				<a href="#topics">Topics</a>
+				-
+				<a href="#organizers">Organizers</a>
+			</p>
+		</div>
+
+		<div class="twelve columns with-padding teaser">
+			<ul class="nodecoration-list teaser-questions">
+				<li>
+					Can machine learning be used to help with the development of effective economic policy?
+				</li>
+				<li>
+					Can we understand economic behavior through granular, economic data sets?
+				</li>
+				<li>
+					Can we automate economic transactions for individuals?
+				</li>
+				<li>
+					Can we build rich and faithful simulations of economic
+					systems with strategic agents?
+				</li>
+			</ul>
+		</div>
+
+	</div>
+
+
+	<div class="row" id="schedule">
+
+		<h2 class="rowheader">
+			SCHEDULE
+		</h2>
+
+
+		<div class="twelve columns">
+			<ul>
+				<li>
+					Talks are hosted on Zoom, register <a href="https://harvard.zoom.us/webinar/register/WN_mJTXlNLEQ827hTXWkc1Orw">here</a>.
+				</li>
+				<li>
+					Discussions will take place on
+					<a href="https://join.slack.com/t/aieconomist/shared_invite/zt-g71ajic7-XaMygwNIup~CCzaR1T0wgA">Slack, join our channel</a>.
+				</li>
+				<li>
+					To receive future announcements: join the
+					<a href="https://groups.google.com/g/ai-for-economics-seminar">
+						Google Group
+					</a>.
+				</li>
+				<li>
+					All talks will be recorded and made available.
+					See <a href="#fullschedule">Full Schedule</a> below for recording
+					links.
+				</li>
+			</ul>
+		</div>
+
+
+
+		<h2>
+			UPCOMING: <strong>November 10, 2020</strong>
+		</h2>
+
+		<div id="spancontainer">
+			<div class="four columns speaker-box">
+				<div class="speaker-tile">
+					<img src="images/Amy_Greenwald.jpeg" />
+					<p class="speaker-name">
+						Amy Greenwald
+					</p>
+					<p class="speaker-affiliation">
+						Brown University
+					</p>
+				</div>
 			</div>
-			<div class="header text-center">
-				<h1>
-					AI FOR ECONOMICS
-				</h1>
-				<h5>
-					SEMINAR CO-ORGANIZED BY HARVARD ECON-CS & SALESFORCE AI RESEARCH
-				</h5>
-        	</div>		
-			<div class="twelve columns">
-				<p style="text-align: center">
-					<a href="#topics">Topics</a>
-					-
-					<a href="#schedule">Schedule</a>
-					- 
-					<a href="#organizers">Organizers</a>
+			<div class="eight columns speaker-box-text">
+				<p class="title">
+					Learning Equilibria in Simulation-Based Games ...
+					and the Ensuing Empirical Design of Mechanisms
+				</p>
+				<p class="abstract">
+					We describe a methodology for the design of parametric mechanisms,
+					which are multiagent systems inhabited by strategic agents, with knobs
+					that can be adjusted to achieve specific goals.  For example, a
+					network designer might seek a design that minimizes congestion
+					assuming selfish agents that play Nash equilibria.  Our methodology
+					applies under two key conditions: 1. the mechanisms induce games that
+					can be simulated, but that do not afford an analytic description,
+					2. the game-theoretic properties of interest (e.g., equilibria, social
+					welfare, etc.) are Lipschitz continuous in utilities.  Under these
+					conditions, we use the probably approximately correct learning
+					framework to construct algorithms that learn such properties.  We
+					show experimentally that our methodology can be used to design
+					effective mechanisms that capture stylized, but rich multiagent
+					systems, such as advertising exchanges, which are not generally
+					amenable to analytical mechanism design.
 				</p>
 			</div>
+			<span class="stretch"></span>
 		</div>
-		
+
+
+		<h2 id="fullschedule">
+			FULL SCHEDULE
+		</h2>
+
+		<table dir="ltr" border="0" cellspacing="0" cellpadding="0">
+			<colgroup>
+				<col width="150">
+				<col width="200">
+				<col width="400">
+			</colgroup>
+			<tbody>
+			<tr class="header">
+				<td><strong>Date</strong></td>
+				<td><strong>Speaker</strong></td>
+				<td><strong>Title</strong></td>
+			</tr>
+
+			<tr>
+				<td>Oct 6, 2020</td>
+				<td>Doyne Farmer<br>(Oxford)</td>
+				<td>
+					Global Microeconomics<br>
+					<a href="https://www.youtube.com/watch?v=pX5cuzvN2RM">recording
+					</a>
+				</td>
+			</tr>
+
+			<tr class="nextevent">
+				<td>Nov 10, 2020</td>
+				<td>Amy Greenwald<br>(Brown)</td>
+				<td>
+					Learning Equilibria in Simulation-Based Games ...
+					and the Ensuing Empirical Design of Mechanisms
+				</td>
+			</tr>
+
+			<tr>
+				<td>Dec 15, 2020</td>
+				<td>Lihong Li<br>(Google)</td>
+				<td>
+					<i>TBA</i>
+				</td>
+			</tr>
+
+			<tr>
+				<td>Feb 2, 2021</td>
+				<td>Fei Fang<br>(CMU)</td>
+				<td>
+					<i>TBA</i>
+				</td>
+			</tr>
+
+			<tr>
+				<td>March 9, 2021</td>
+				<td>Thore Graepel<br>(DeepMind, UCL)</td>
+				<td>
+					<i>TBA</i>
+				</td>
+			</tr>
+
+
+			</tbody>
+		</table>
+	</div>
+
+
+
+	<div class="row" id="topics">
+
+		<h2 class="rowheader">
+			TOPICS
+		</h2>
+
+		<p>
+			Machine learning offers enormous potential to transform our understanding of economics, economic decision making, and public policy. Yet its adoption by economists, social scientists, and policymakers remains nascent.
+		</p>
+		<p>
+			This seminar series will highlight both the opportunities as well as the barriers to the adoption of ML in economics. In particular, we aim to accelerate the use of machine learning to rapidly develop, test, and deploy effective economic policies that are grounded in representative data.
+		</p>
+		<p>
+			This seminar series will expose some of the critical socio-economic issues that stand to benefit from applying machine learning, expose underexplored economic datasets and simulations, and identify machine learning research directions that would have a significant positive socio-economic impact. This includes policies and mechanisms that target socio-economic issues such as diversity and fair representation in economic outcomes, economic equality, and improving economic opportunity.
+		</p>
+
 		<div class="row teaser">
-			<div class="twelve columns with-padding teaser">
-				<ul class="nodecoration-list teaser-questions">
-					<li>
-						Can machine learning be used to help with the development of effective economic policy?
-					</li>
-					<li>
-						Can we understand economic behavior through granular, economic data sets?
-					</li>
-					<li>
-						Can we automate economic transactions for individuals?
-					</li>
-					<li>
-						How can we build rich and faithful simulations of economic systems with strategic agents?
-					</li>
-				</ul>
-			</div>
-		</div>
-		
-<!--		<div class="row">-->
-<!--			<h2>-->
-<!--				UPCOMING: <strong>October 6, 2020</strong>-->
-<!--			</h2>-->
-<!--			<div id="spancontainer">-->
-<!--				<div class="four columns speaker-box">-->
-<!--					<div class="speaker-tile">-->
-<!--						<img src="images/Farmer_Doyne.jpg" />-->
-<!--						<p class="speaker-name">-->
-<!--							Doyne Farmer-->
-<!--						</p>-->
-<!--						<p class="speaker-affiliation">-->
-<!--							Oxford-->
-<!--						</p>-->
-<!--					</div>-->
-<!--				</div>-->
-<!--				<div class="eight columns speaker-box-text">-->
-<!--					<p class="title">-->
-<!--						Global Microeconomics-->
-<!--					</p>-->
-<!--					<p class="abstract">-->
-<!--						Conventional economics is based on ideas, such as utility maximization, that are difficult to match to empirical data.-->
-<!--						We are increasingly able to capture rich microdata on individual agents and institutions that allow us to build models from the bottom up.-->
-<!--						This requires new approaches based on directly modeling behavior using more realistic models of behavior.-->
-<!--						I’ll give a few examples that serve as proofs of principle, and paint a vision of what can be done.-->
-<!--					</p>-->
-<!--				</div>-->
-<!--				<span class="stretch"></span>-->
-<!--			</div>-->
-<!--		</div>-->
 
-		<div class="row">
-			<h2>
-				UPCOMING: <strong>November 10, 2020</strong>
-			</h2>
-			<div id="spancontainer">
-				<div class="four columns speaker-box">
-					<div class="speaker-tile">
-						<img src="images/Amy_Greenwald.jpeg" />
-						<p class="speaker-name">
-							Amy Greenwald
-						</p>
-						<p class="speaker-affiliation">
-							Brown University
-						</p>
-					</div>
-				</div>
-				<div class="eight columns speaker-box-text">
-					<p class="title">
-						Learning Equilibria in Simulation-Based Games ...
-						and the Ensuing Empirical Design of Mechanisms
-					</p>
-					<p class="abstract">
-						We describe a methodology for the design of parametric mechanisms,
-						which are multiagent systems inhabited by strategic agents, with knobs
-						that can be adjusted to achieve specific goals.  For example, a
-						network designer might seek a design that minimizes congestion
-						assuming selfish agents that play Nash equilibria.  Our methodology
-						applies under two key conditions: 1. the mechanisms induce games that
-						can be simulated, but that do not afford an analytic description,
-						2. the game-theoretic properties of interest (e.g., equilibria, social
-						welfare, etc.) are Lipschitz continuous in utilities.  Under these
-						conditions, we use the probably approximately correct learning
-						framework to construct algorithms that learn such properties.  We
-						show experimentally that our methodology can be used to design
-						effective mechanisms that capture stylized, but rich multiagent
-						systems, such as advertising exchanges, which are not generally
-						amenable to analytical mechanism design.
-					</p>
-				</div>
-				<span class="stretch"></span>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="twelve columns">
-				<h2>
-					ACCESS
-				</h2>
-				<ul>
-					<li>
-						Talks are hosted on Zoom, register <a href="https://harvard.zoom.us/webinar/register/WN_mJTXlNLEQ827hTXWkc1Orw">here</a>.
-					</li>
-					<li>
-						All talks will be recorded and made available.
-					</li>
-					<li>
-						Discussions will take place on
-						<a href="https://join.slack.com/t/aieconomist/shared_invite/zt-g71ajic7-XaMygwNIup~CCzaR1T0wgA">Slack, join our channel</a>.
-					</li>
-					<li>
-						To receive future announcements: join the 
-						<a href="https://groups.google.com/g/ai-for-economics-seminar">
-							Google Group
-						</a>.
-					</li>
-				</ul>
-			</div>
-		</div>
-				
-		<div class="row" id="schedule">
-			<div class="twelve columns">
-				<h2>
-					SCHEDULE
-				</h2>
-				<p>
-					<ul>
-						<li>
-							October 6, 2020: Doyne Farmer (Oxford)
-						</li>
-						<li>
-							November 10, 2020: Amy Greenwald (Brown)
-						</li>
-						<li>
-							December 15, 2020: Lihong Li (Google)
-						</li>
-						<li>
-							February 2, 2021: Fei Fang (CMU)
-						</li>
-						<li>
-							March 9, 2021: Thore Graepel (Deepmind, UCL)
-						</li>
-					</ul>
-				</p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="twelve columns">
-				<p>
-					Machine learning offers enormous potential to transform our understanding of economics, economic decision making, and public policy. Yet its adoption by economists, social scientists, and policymakers remains nascent.
-				</p>
-				<p>
-					This seminar series will highlight both the opportunities as well as the barriers to the adoption of ML in economics. In particular, we aim to accelerate the use of machine learning to rapidly develop, test, and deploy effective economic policies that are grounded in representative data.
-				</p>
-				<p>
-					This seminar series will expose some of the critical socio-economic issues that stand to benefit from applying machine learning, expose underexplored economic datasets and simulations, and identify machine learning research directions that would have a significant positive socio-economic impact. This includes policies and mechanisms that target socio-economic issues such as diversity and fair representation in economic outcomes, economic equality, and improving economic opportunity.
-				</p>
-
-			</div>
-		</div>
-		<div class="row" id="topics">
 			<div class="six columns">
 				<h2>
 					ECONOMICS
@@ -245,48 +265,55 @@
 				</ul>
 			</div>
 		</div>
-		<div class="row" id="organizers">
-			<h2>
-				ORGANIZATION
-			</h2>
-			<div id="spancontainer">
-				<div class="organizer-box">
-					<div class="organizer-tile">
-						<img src="images/david.png" />
-						<p class="organizer-name">
-							David C. Parkes
-						</p>
-						<p class="organizer-affiliation">
-							Harvard
-						</p>
-					</div>
+	</div>
+
+
+	<div class="row" id="organizers">
+
+		<h2 class="rowheader">
+			ORGANIZATION
+		</h2>
+
+		<div id="spancontainer">
+			<div class="organizer-box">
+				<div class="organizer-tile">
+					<img src="images/david.png" />
+					<p class="organizer-name">
+						David C. Parkes
+					</p>
+					<p class="organizer-affiliation">
+						Harvard
+					</p>
 				</div>
-				<div class="organizer-box">
-					<div class="organizer-tile">
-						<img src="images/alex.jpg" />
-						<p class="organizer-name">
-							Alex Trott
-						</p>
-						<p class="organizer-affiliation">
-							Salesforce
-						</p>
-					</div>
-				</div>
-				<div class="organizer-box">
-					<div class="organizer-tile">
-						<img src="images/stephan.jpg" />
-						<p class="organizer-name">
-							Stephan Zheng
-						</p>
-						<p class="organizer-affiliation">
-							Salesforce
-						</p>
-					</div>
-				</div>
-				<span class="stretch"></span>
 			</div>
+			<div class="organizer-box">
+				<div class="organizer-tile">
+					<img src="images/alex.jpg" />
+					<p class="organizer-name">
+						Alex Trott
+					</p>
+					<p class="organizer-affiliation">
+						Salesforce
+					</p>
+				</div>
+			</div>
+			<div class="organizer-box">
+				<div class="organizer-tile">
+					<img src="images/stephan.jpg" />
+					<p class="organizer-name">
+						Stephan Zheng
+					</p>
+					<p class="organizer-affiliation">
+						Salesforce
+					</p>
+				</div>
+			</div>
+			<span class="stretch"></span>
 		</div>
 	</div>
+
+
+</div>
 </body>
 
 </html>
